# cryptopublisher

./: Cargo.toml  Dockerfile
k8s/: crypto-publisher.yaml
src/: data.rs  main.rs
